Smaller splash screen for mobiles. Fixed navigation fantom height on mobile.

--- a/css/splash.less
+++ b/css/splash.less
@@ -3,6 +3,7 @@ section.splash-screen {
     @third_vh: 100vh / 3;
     position: relative;
     min-height: calc(@two_third_vh);
+    @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { min-height: 0px; }
     overflow: visible; //for drop down menu
     grid { @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { padding: 0px; } }
     content { @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { padding: 0px; } }
@@ -21,6 +22,7 @@ section.splash-screen {
     navigation-fantom {
         display: block;
         height: @NAVIGATION_HEIGHT;
+        @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { height: @NAVIGATION_HEIGHT_MOBILE; }
         width: 100%;
     }
 
@@ -30,10 +32,13 @@ section.splash-screen {
     .page & {
         min-height: calc(~"@{third_vh} + @{NAVIGATION_HEIGHT}");
         .splash-screen-wrap { min-height: @third_vh}
-        .table { height: @third_vh } //firefox table doesn't know min-height
+        .table { 
+            height: @third_vh; //firefox table doesn't know min-height 
+        } 
         splash content titles h1 { margin-bottom: -5px; }
         splash content logo { display: none; }
         .table, content { width: 100%; }
+        content { @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { font-size: 0.75em; } }
     }
 
     background-color: @AUDIENCE_COLOR !important;
